# tenant.social

./: .air.toml  .dockerignore  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  FEATURE_PLAN_TWO_COLUMN_GALLERY.md  FOLLOW_VERIFICATION_PLAN.md  FRIENDSHIP_ARCHITECTURE.md  FRIENDS_UI_PLAN.md  IMPLEMENTATION_PLAN.md  Makefile  OPTIMIZATION_PLAN.md  README.md  THING_LINKING_PLAN.md  fly.toml  go.mod  go.sum  litestream.yml  main.go  playwright.config.ts  tsconfig.json
backend-rust/tenant-vm/: Cargo.toml  FEATURE_GAP_PLAN.md  PARITY_ISSUES.md
backend-rust/tenant-vm/src/: lib.rs  main.rs  metrics.rs
backend-rust/tenant-vm/src/api/: mod.rs
backend-rust/tenant-vm/src/auth/: mod.rs
backend-rust/tenant-vm/src/events/: mod.rs
backend-rust/tenant-vm/src/models/: mod.rs
backend-rust/tenant-vm/src/store/: mod.rs  mod.rs.bak
backend-rust/tenant-vm/tests/: admin_tests.rs  api_keys_tests.rs  auth_api_tests.rs  bulk_tests.rs  comment_tests.rs  export_import_tests.rs  federation_tests.rs  kinds_api_tests.rs  notification_reaction_tests.rs  photos_tests.rs  public_api_tests.rs  search_tests.rs  tags_tests.rs  things_api_tests.rs  upsert_bulk_update_tests.rs  versions_tests.rs  views_tests.rs
cmd/tenant/: main.go
docs/: COMMENT_SYSTEM_PLAN.md  COMMENT_TEST_CASES.md  DEPLOYMENT.md  ROADMAP.md  SOCIAL_IMPLEMENTATION_PLAN.md
internal/api/: api.go  api_test.go
internal/auth/: auth.go  auth_test.go
internal/models/: models.go
internal/storage/: storage.go
web/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
web/src/: App.tsx  (+6 more)
(+7 files in other folders)
